# DiverseSeq

./: .gitignore  .hgignore  .hgtags  .readthedocs.yaml  Cargo.toml  README.md  mkdocs.yml  noxfile.py  pyproject.toml  rtd_get_docs.py  ruff.toml
.github/: dependabot.yml
.github/workflows/: build_docs.yml  ci-cogent3-dev.yml  ci.yml  codeql.yml  linters.yml  release.yml  testing_develop.yml
diverse_seq/: __init__.py  cli.py  cluster.py  data_store.py  distance.py  io.py  record.py  records.py  util.py
docs/: apps.py  cli.md  index.md  llms.txt
docs/hooks/: env.py
nbks/: benchmark.ipynb  benchmark.py  benchmark.tsv  jsd_v_dist.py  plugin_demo.ipynb  synthetic_known.ipynb  synthetic_known.py
paper/: header.tex  paper.bib  paper.md
paper/figs/: max.tex  nmost.tex
paper/nbks/: README.md  align-mammal-orthologs.py  benchmark.ipynb  benchmark.py  benchmark.tsv  benchmark_ctree.py  ctree.ipynb  get_data_sets.py  jsd_v_dist-sizes.tsv  jsd_v_dist-stats.tsv  jsd_v_dist.ipynb  jsd_v_dist.py  jsd_v_dist.tsv  plugin_demo.ipynb  project_path.py  synthetic_known.ipynb  synthetic_known.py  synthetic_known_summary.tsv
paper/nbks/ctree/: README.md  experiment.py  iq_experiment.py  likelihoods.py
paper/nbks/ctree/data/mammals-aligned/: README.md
paper/results/: benchmark-ctree.tsv  benchmark-max.tsv  benchmark-nmost.tsv  benchmark.tsv  ctree_time.tsv  jsd_v_dist-max.tsv  jsd_v_dist-nmost.tsv  jsd_v_dist-sizes.tsv  jsd_v_dist-stats.tsv  synthetic_known_summary.tsv
src/: distance.rs  lib.rs  record.rs  records.rs  records_py.rs  zarr_io.rs  zarr_py.rs
src/divergent/: __init__.py  app.py  cli.py  data_store.py  distance.py  io.py  loader.py  record.py  records.py  unique.py  util.py  writer.py
src/diverse_seq/: __init__.py  cli.py  cluster.py  data_store.py  distance.py  io.py  record.py  records.py  util.py
tests/: conftest.py  test_cli.py  test_ctree.py  test_data_store.py  test_distance.py  test_record.py  test_records.py  test_util.py  test_zarr_store.py
tests/data/: brca1-rna.fasta  brca1.dvgtseqs  brca1.fasta
tests/data/brca1/: Aardvark.fasta  AfricanEl.fasta  Anteater.fasta  AsianElep.fasta  Bandicoot.fasta  Caenolest.fasta  Cat.fasta  Chimpanzee.fasta  Cow.fasta  Dog.fasta  DogFaced.fasta  Dugong.fasta  FalseVamp.fasta  FlyingFox.fasta  FlyingLem.fasta  FlyingSqu.fasta  FreeTaile.fasta  Galago.fasta  GiantElep.fasta  GoldenMol.fasta  Gorilla.fasta  HairyArma.fasta  Hedgehog.fasta  Hippo.fasta  Horse.fasta  HowlerMon.fasta  Human.fasta  HumpbackW.fasta  Jackrabbit.fasta  LeafNose.fasta  LesserEle.fasta  LittleBro.fasta  Llama.fasta  Madagascar.fasta  Manatee.fasta  Mole.fasta  Mouse.fasta  NineBande.fasta  OldWorld.fasta  Orangutan.fasta  (+15 more)
