[package]
name = "diverse_seq"
version = "2026.4.21"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"], optional = true }
zarrs = { version = "0.23.10", features = ["zstd"] }
zarrs_storage = { version = "0.4.3" }
rustc-hash = "2.1.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }
serde_json = "1.0.149"

[features]
default = ["python"]
python = ["pyo3"]    # this allows testing python code
rust-only = []       # this allows testing rust-only code

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.27.0"
