[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diverse_seq"
authors = [
    { name = "Gavin Huttley", email = "Gavin.Huttley@anu.edu.au"},
]
keywords = ["biology", "genomics", "statistics", "phylogeny", "evolution", "bioinformatics"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "attrs",
    "click",
    "cogent3",
    "hdf5plugin",
    "h5py",
    "numpy>=2.0",
    "rich",
    "scitrack",
    ]
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
    ]
# the following are inferred from the source code
dynamic = ["version", "description"]

[project.urls]
Documentation = "https://github.com/HuttleyLab/DiverseSeq"
"Bug Tracker" = "https://github.com/HuttleyLab/DiverseSeq/issues"
"Source Code" = "https://github.com/HuttleyLab/DiverseSeq/"

[tool.flit.sdist]
include = ["tests/*"]

[project.scripts]
dvs = "diverse_seq.cli:main"

[project.optional-dependencies]
test = [
    "nox",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff==0.6.2",
]
dev = [
    "cogapp",
    "docformatter",
    "flit",
    "nox",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff==0.6.2",
]
doc  = ["click",
        "ipykernel",
        "ipython",
        "ipywidgets",
        "jupyter-sphinx",
        "jupyter_client",
        "jupyterlab",
        "jupytext",
        "kaleido",
        "nbconvert>5.4",
        "nbformat",
        "nbsphinx",
        "numpydoc",
        "pandas",
        "plotly"
        ]

[project.entry-points."cogent3.app"]
dvs_select_nmost = "diverse_seq.records:dvs_select_nmost"
dvs_select_max = "diverse_seq.records:dvs_select_max"

[tool.pytest.ini_options]
addopts = ["--strict-config", "-ra"]
testpaths = "tests"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
ignore = ["EXE002", "FA100", "E501", "D"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests...
    "INP001", # __init__.py files are not required...
    "ANN",
    "N802",
    "N803"
]
"noxfile.py" = [
    "S101", # asserts allowed in tests...
    "INP001", # __init__.py files are not required...
    "ANN",
    "N802",
    "N803"
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "lf"
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
# group diverse_seq imports last
known-first-party = ["diverse_seq"]
